--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
+    "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
     "react-redux": "^7.2.0",
